force-app/main/default/objects/Deal_Document__c/fields/Send_Term_Sheet_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Send_Term_Sheet_to_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this checkbox is marked (True), this term sheet will be sent to the borrower for Signature</inlineHelpText>
    <label>Send Term Sheet to Borrower</label>
    <type>Checkbox</type>
</CustomField>