force-app/main/default/objects/Deal_Document__c/fields/Sent_to_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Custodian__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Document has been sent to the Custodian</description>
    <label>Sent to Custodian</label>
    <type>Checkbox</type>
</CustomField>