force-app/main/default/objects/Deal_Document__c/fields/Service_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Link_Id__c</fullName>
    <externalId>true</externalId>
    <label>Service Link Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>