force-app/main/default/objects/Deal_Document__c/fields/Submission_Failed__c.field-meta.xml
<CustomField>
    <fullName>Submission_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission Failed</label>
    <type>Checkbox</type>
</CustomField>