force-app/main/default/objects/Deal_Document__c/fields/TermSheet_sent_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>TermSheet_sent_to_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Sheet Sent to Portal</label>
    <type>Checkbox</type>
</CustomField>