force-app/main/default/objects/Deal_Document__c/fields/Title_Order__c.field-meta.xml
<CustomField>
    <fullName>Title_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Order</label>
    <referenceTo>Title_Order__c</referenceTo>
    <relationshipLabel>Deal Documents</relationshipLabel>
    <relationshipName>Deal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>