force-app/main/default/objects/Deal_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Please use the &quot;Update Folder&quot; button to make changes to the Folder and Document Type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Diligence</fullName>
            </value>
            <value>
                <fullName>Background and Credit Information</fullName>
            </value>
            <value>
                <fullName>Borrower Entity Information</fullName>
            </value>
            <value>
                <fullName>Corporate Entity Documents</fullName>
            </value>
            <value>
                <fullName>Diligence Documents</fullName>
            </value>
            <value>
                <fullName>DS Funding Package</fullName>
            </value>
            <value>
                <fullName>IC Memo</fullName>
            </value>
            <value>
                <fullName>Insurance Information</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Loan Document</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Models</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Title Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>