force-app/main/default/objects/Deal_Document__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Underwriter from the related Deal</description>
    <inlineHelpText>Underwriter from the related Deal</inlineHelpText>
    <label>Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>