force-app/main/default/objects/Deal_Document__c/fields/Uploader_Profile__c.field-meta.xml
<CustomField>
    <fullName>Uploader_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploader Profile</label>
    <type>Text</type>
</CustomField>