force-app/main/default/objects/Deal_Document__c/fields/Uploader_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Uploader_Vendor_Type__c</fullName>
    <formula>CreatedBy.Vendor_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploader Vendor Type</label>
    <type>Text</type>
</CustomField>