force-app/main/default/objects/Deal_Document__c/fields/Vendor_Access__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Access</label>
    <type>Checkbox</type>
</CustomField>