force-app/main/default/objects/Deal_Document__c/fields/Vendor_Type_Access__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type_Access__c</fullName>
    <label>Vendor Type Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>