force-app/main/default/objects/Deal_Document__c/fields/X2nd_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to 2nd underwriter field on deal. Used for notifications when documents are uploaded.</description>
    <label>2nd Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Documents7</relationshipName>
    <type>Lookup</type>
</CustomField>