force-app/main/default/objects/Deal_Document__c/listViews/Deal_Documents_Uploaded.listView-meta.xml
<ListView>
    <fullName>Deal_Documents_Uploaded</fullName>
    <columns>NAME</columns>
    <columns>Added_By__c</columns>
    <columns>Added_On__c</columns>
    <columns>Confidential__c</columns>
    <columns>Deal__c</columns>
    <columns>Document_Loaded__c</columns>
    <columns>Doc_String__c</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>Deal Documents Uploaded</label>
</ListView>