force-app/main/default/objects/Deal_Document__c/listViews/Doc_Recently_Uploaded.listView-meta.xml
<ListView>
    <fullName>Doc_Recently_Uploaded</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Property__c</columns>
    <columns>Added_By__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Docs Recently Uploaded</label>
</ListView>