force-app/main/default/objects/Deal_Document__c/listViews/IC_Memos.listView-meta.xml
<ListView>
    <fullName>IC_Memos</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deal_RecordType__c</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Folder_String__c</columns>
    <columns>Type__c</columns>
    <columns>Deal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>contains</operation>
        <value>Draft IC Memo,Final IC Memo</value>
    </filters>
    <label>IC Memos</label>
</ListView>