force-app/main/default/objects/Deal_Document__c/listViews/Recent_Term_Sheets_Created.listView-meta.xml
<ListView>
    <fullName>Recent_Term_Sheets_Created</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deal_RecordType__c</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Folder_String__c</columns>
    <columns>Type__c</columns>
    <columns>Deal__c</columns>
    <columns>Executive_Approval_Date__c</columns>
    <columns>Portal_Error_Message__c</columns>
    <columns>TermSheet_sent_to_Portal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Term Sheet</value>
    </filters>
    <label>Recent Term Sheets Created</label>
</ListView>